--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h2 class="heading">MENU</h2>
 
 <div class="menu">
-<a href="ARTIST.html"> <img src="images/テーブルウェア.jpg"></a>
+<a href="ARTIST.html"> <img src="images/images/https://github.com/esolakuma/esolakuma.github.io/blob/master/%E3%83%86%E3%83%BC%E3%83%96%E3%83%AB%E3%82%A6%E3%82%A7%E3%82%A2.jpg?raw=true.jpg"></a>
 <a href="WORKS.html"><img src="images/黒青リム.jpg"></a>
 <a href="NEWS.html"><img src="images/萩.jpg"></a>
 <a href="CONTACT.html"><img src="images/ぐい吞み（青緑）.jpg"></a>
